old/ingress-extensions.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: default
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
      - https-example.foo.com
    secretName: double-secret
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
